fix: fixes z-index issue with menu overlay

--- a/src/sass/components/_category-card.scss
+++ b/src/sass/components/_category-card.scss
@@ -23,7 +23,7 @@
   border-radius: 19px;
   position: relative;
   box-shadow: -1px 15px 30px -12px black;
-  z-index: 9999;
+  z-index: 1;
   transition: 0.5s ease;
   cursor: pointer;
 }
