--- a/src/sass/layout/_page.scss
+++ b/src/sass/layout/_page.scss
@@ -41,7 +41,7 @@ body {
     width: 85vw;
     margin: 0 auto;
 	margin-top: 20px;
-	animation: fadeIn ease 2s; 
+	// animation: fadeIn ease 2s; 
     animation-iteration-count: 1; 
     animation-fill-mode: forwards; 
 }
